assets/css/audacious.scss
---
---
@charset "utf-8";

/* ================================
  Designed by K.Q. Dreger.

  An amalgamation of parts of the web that I admire. Includes:
  - couldal.com
  - daringfireball.net
  - kottke.org
  - pxlnv.com
  - signalvnoise.com
  - fivethirtyeight.com

  On the shoulders of giants, so they say.
================================ */



/* ================================
  http://meyerweb.com/eric/tools/css/reset/
  v2.0 | 20110126
  License: none (public domain)
================================ */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* ================================
   VARIABLES
================================ */

$max-width: 38rem;
$line-height: 1.45em;

$sans: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
$serif: $sans, Charter, Georgia, serif;
$mono: Menlo, monospace;

$bg: #f8f8f8;
$copy: RGBA(52, 60, 71, 1.00);
$color: RGBA(0,122,255,1.00);
$faded: #888;
$more-faded: #bbb;
$most-faded: #ddd;

$f1: 3rem;
$f2: 2.25rem;
$f3: 1.5rem;
$f4: 1.25rem;
$f5: 1rem;
$f6: .875rem;

/* ================================
   UNRESET CLASSES
================================ */

* {
  -moz-box-sizing: content-box;
  box-sizing: content-box;
}

html {
  font-size: 16px;
}

body {
  font-family: $serif;
  line-height: $line-height;
  margin: 0;
  color: $copy;
	background: $bg;
	font-weight: 400;
}

a {
  color: $color;
	text-decoration: none;
  &:hover {
		text-decoration: underline;
	}
}

em { font-style: italic; }

strong {
  text-transform: uppercase;
  letter-spacing: .1em;
  font-weight: 500;
	font-family: $sans;
  font-size: $f6;
}

h1,h2,h3,h4,h5,h6,p,img,ul,ol,aside,blockquote {
  margin-bottom: 1.25em;
}

h1,h2,h3,header {
	font-family: $sans;
}

h1 {
  font-size: $f3;
  font-weight: 400;
	margin-bottom: 1.5rem;
  line-height: 1.2em;
  a {
		text-decoration: none;
		border: 0;
	}
}

h2 {
  font-size: $f5;
  font-weight: 500;
  line-height: 1.2em;
	text-transform: uppercase;
	letter-spacing: .1em;
	margin-bottom: 1.25rem;
  margin-top: 2.25rem;
}

h3 {
	font-size: $f5;
	font-weight: 700;
	margin-top: 2.25rem;
	margin-bottom: .5rem;
}

img {
  display: block;
  width: 100%;
}

em img {
  width: $max-width + 14rem;
  margin-left: -9.25rem;
	border: solid $f6 $bg;
	border-left: 0;
	border-right: 0;
}

small {
	font-size: $f6;
	line-height: 1em;
}

ul,ol { padding-left: 1.25rem; }
ul li { list-style: square; }
li { margin-bottom: .5em; }

hr {
  height: 4px;
  border: 0;
  background: $bg;
  margin: 1.5rem 0;
  display: block;
	&.index-break {
		margin: 0 3rem;
	}
}

blockquote {
	width: 90%;
	margin: 2.25rem auto;
	color: $faded;
	padding: 0;
	+ blockquote {
		margin-top: -2.25rem;
		padding-top: 1.25em;
	}
  p:last-child { margin-bottom: 0; }
}

article {
  margin: 1.5rem 0;
	background: white;
  padding: 1.5rem;
	position: relative;
	padding: 2.25rem;
  p:last-child,
	blockquote:last-child { margin-bottom: 0; }
}

aside {
	width: 33%;
	float: right;
	margin: 0 0 1.25rem 1.25rem;
	padding: .5rem 0 0;
	font-size: $f6;
	color: $faded;
	line-height: $line-height;
	border-top: solid 2px $most-faded;
}

code {
	font-family: $mono;
	font-size: $f6;
	padding: 1px 4px;
	border: solid 1px $most-faded;
}

/* ================================
   STYLES
================================ */

.wrapped {
  max-width: $max-width;
  margin: 0 auto 3rem;
  display: flex;
  flex-direction: column;
}

.af-header {
	background: white;
	padding: 2.25rem;
	display: flex;
	align-items: center;
}

.site-header {
  line-height: 1em;
  margin: 0;
	padding: 0;
	font-size: $f3;
	font-weight: 900;
	border: 0;
	a {
		text-decoration: none;
		border: 0;
		color: $copy;
		&:hover {
			color: $more-faded;
			background: none;
		}
	}
}

.site-nav {
	margin-left: auto;
	ul {
		padding: 0;
		margin: 0;
		font-family: $sans;
		font-size: $f6;
		line-height: 1em;
		color: $more-faded;
	}
  li {
    display: inline-block;
    margin: 0 1rem 0 0;
    &:last-child { margin-right: 0; }
  }
  a {
		text-decoration: none;
		border: 0;
		color: $faded;
		&:hover {
			color: $more-faded;
			background: none;
		}
	}
}

.article-date {
  font-weight: normal;
	line-height: 1em;
	color: $more-faded;
	font-family: $sans;
	margin-top: 1.25rem;
	a {
		border: 0;
	}
}

.index-date {
	padding-left: 2.25rem;
	font-weight: 300; 
	color: $more-faded;
}

.link {
  line-height: $line-height;
	margin-top: 0;
}

.post-url {
	margin-left: auto;
	color: $most-faded;
	line-height: 1em;
	padding-right: 1rem;
}

.interview {
  margin-left: 1.5rem;
  margin-bottom: 1.5rem;
  h1,
  h2,
  h3,
  .name, strong {
    margin-left: -1.5rem;
  }
  .name { @extend strong; }
}

@media (max-width: $max-width + 14rem) {
	em img {
	  margin-left: 0;
	  width: 100%;
		border: 0;
	}
}

@media (max-width: $max-width) {
  .wrapped {
    margin: 0 auto;
  }
  .af-header {
		padding: 1.5rem;
		border: 0;
		display: initial
	}
	.site-header {
		margin-bottom: 1rem;
	}
  .site-content { order: 2; }
  article {
		padding: 1.5rem 1.5rem;
		border-radius: 0;
		margin: .5rem 0;
		&:first-child {
			margin-top: 0;
			border-top: 0;
		}
	}
	.index-date { padding-left: 1.5rem; }
	aside {
		width: 100%;
		margin: 0 0 1.25rem;
	}
}


/* ================================
   UTILITY CLASSES
================================ */

.flex { display: flex; }
.mla { margin-left: auto; }
.gray { color: $more-faded; }
.small { font-size: $f6; line-height: 1em; }

